# putong-judger-sync

./: .gitignore  Dockerfile.judger  Dockerfile.sandbox  README.md  main.py  pyproject.toml  run.py
.github/workflows/: ci.yml
board/: .gitignore  eslint.config.cjs  index.html  package.json  tsconfig.json  vite.config.ts
board/src/: App.vue  Ranklist.vue  main.ts
data/problems/a-plus-b/: problem.yaml  statement.md
judger/: __init__.py  api.py  checker.py  client.py  config.py  judger.py  language.py  models.py
overseer/: agent.py  provider.py  recorder.py
overseer/problems/: loader.py  models.py  registry.py
overseer/tools/: definitions.py  executor.py
tests/: test_api.py  test_client.py  test_judge.py  test_judge_interaction.py  test_judge_tradition.py
